[gd_scene load_steps=22 format=1]

[ext_resource path="res://Scripts/Base/player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Entities/entity_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Data/Graphics/Abstract/sphere_32.png" type="Texture" id=3]
[ext_resource path="res://Data/Graphics/Abstract/sphere_120.png" type="Texture" id=4]
[ext_resource path="res://Data/Graphics/Abstract/square.png" type="Texture" id=5]
[ext_resource path="res://Data/Sounds/bullet.wav" type="Sample" id=6]
[ext_resource path="res://Data/Sounds/checkpoint.wav" type="Sample" id=7]
[ext_resource path="res://Data/Sounds/death.wav" type="Sample" id=8]
[ext_resource path="res://Data/Sounds/next_level.wav" type="Sample" id=9]
[ext_resource path="res://Data/Sounds/spawn.wav" type="Sample" id=10]
[ext_resource path="res://Data/Sounds/speed.wav" type="Sample" id=11]
[ext_resource path="res://Data/Sounds/star.wav" type="Sample" id=12]
[ext_resource path="res://Data/Sounds/to_normal.wav" type="Sample" id=13]
[ext_resource path="res://Data/Sounds/to_small.wav" type="Sample" id=14]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 55.0

[sub_resource type="Animation" id=2]

length = 0.8
loop = true
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 50, 50 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:zoom")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:smoothing/enable")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 50, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:smoothing/enable")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:zoom")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.4
loop = false
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trail:params/initial_size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Trail:params/final_size")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 0.3, 0.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:zoom")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 4, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Trail Quarsh:params/initial_size")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 48.0, 96.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Quarsh/Sprite1:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 48 ), Vector2( 96, 96 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Quarsh/Sprite2:transform/scale")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 48 ), Vector2( 96, 96 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = false
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trail:params/initial_size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Trail:params/final_size")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 0.6, 0.3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:zoom")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Trail Quarsh:params/initial_size")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 96.0, 48.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Quarsh/Sprite2:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 96 ), Vector2( 48, 48 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Quarsh/Sprite1:transform/scale")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 96 ), Vector2( 48, 48 ) ]
}

[sub_resource type="SampleLibrary" id=7]

samples/bullet = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/checkpoint = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/death = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/next_level = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/spawn = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/speed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/star = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/to_normal = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/to_small = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}

[node name="player" type="RigidBody2D"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.5
gravity_scale = 3.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 6
contact_monitor = true
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 2.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
bullet_scene = ExtResource( 2 )

[node name="Particles" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 0.5
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 30, 30 )
config/local_space = false
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 200.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.1
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Trail" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 0.2
config/preprocess = 0.2
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 4 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.6
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.1

[node name="Trail Quarsh" type="Particles2D" parent="."]

visibility/self_opacity = 0.15
config/amount = 64
config/lifetime = 0.3
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 5 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 10.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 96.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 4 )
modulate = Color( 0.2, 0.698039, 0.298039, 1 )

[node name="Quarsh" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false

[node name="QuarshAnim" type="AnimationPlayer" parent="Quarsh"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite2" type="Sprite" parent="Quarsh"]

transform/scale = Vector2( 96, 96 )
texture = ExtResource( 5 )

[node name="Sprite1" type="Sprite" parent="Quarsh"]

transform/scale = Vector2( 96, 96 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/enter = SubResource( 3 )
anims/exit = SubResource( 4 )
anims/to_normal = SubResource( 5 )
anims/to_small = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 4, 4 )
limit/left = -65536
limit/top = -65536
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 6.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="shape" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Switch" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]

visibility/behind_parent = true
color = Color( 1, 1, 1, 1 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 12
config/samples = SubResource( 7 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


